@@ -569,6 +569,28 @@ name|GROUP_NAME_ATTR_DEFAULT
 init|=
 literal|"cn"
 decl_stmt|;
+comment|/*    * LDAP {@link SearchControls} attribute to set the time limit    * for an invoked directory search. Prevents infinite wait cases.    */
+DECL|field|DIRECTORY_SEARCH_TIMEOUT
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DIRECTORY_SEARCH_TIMEOUT
+init|=
+name|LDAP_CONFIG_PREFIX
+operator|+
+literal|".directory.search.timeout"
+decl_stmt|;
+DECL|field|DIRECTORY_SEARCH_TIMEOUT_DEFAULT
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|DIRECTORY_SEARCH_TIMEOUT_DEFAULT
+init|=
+literal|10000
+decl_stmt|;
+comment|// 10s
 DECL|field|LOG
 specifier|private
 specifier|static
@@ -1385,6 +1407,25 @@ argument_list|(
 name|GROUP_NAME_ATTR_KEY
 argument_list|,
 name|GROUP_NAME_ATTR_DEFAULT
+argument_list|)
+expr_stmt|;
+name|int
+name|dirSearchTimeout
+init|=
+name|conf
+operator|.
+name|getInt
+argument_list|(
+name|DIRECTORY_SEARCH_TIMEOUT
+argument_list|,
+name|DIRECTORY_SEARCH_TIMEOUT_DEFAULT
+argument_list|)
+decl_stmt|;
+name|SEARCH_CONTROLS
+operator|.
+name|setTimeLimit
+argument_list|(
+name|dirSearchTimeout
 argument_list|)
 expr_stmt|;
 name|this
